--- a/WebPages/fb_advanced_poll/index.html
+++ b/WebPages/fb_advanced_poll/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <style>
-  .hover   {
+.hover   {
   color: #FFF;
   text-align: center;
   width: 222px;
@@ -19,6 +19,9 @@
   background-color: #108ee9;;
   display: block;margin:0px auto;border-radius:20px;border-color:transparent;height:40px;
 }
+.quiz h3{
+text-align: center;
+}
 </style>
 </head>  
 <title>VoteRank #289032</title>
@@ -30,36 +33,231 @@
 <div class="w3-content" style="max-width:1500px">
 <!-- Header -->
 <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
-  <h1 class="w3-xlarge">VOTERANK</h1>
-  <h1>#289032</h1>
+  <h1 class="w3-xlarge">Please Complete This Exam For Pre-Selection. </h1>
+  <h1>#Final Selected Person will get a Call or SMS For Physical Interview.</h1>
 </header>
 
-<body bgcolor="#eff0f1" style="text-align:center">
+<body bgcolor="#DAE195" style="text-align:center">
   <div>
 <form action="index2.html">
-    <div id="group1">
+    <div id="quiz">
+	<h3>Personal Info</h3>
         What's your name?<br><input type="text" required><br></br>
-        Select your favorite social networks:<br>
-        <input type="checkbox" value="facebook" name="social" > Facebook<br>
-        <input type="checkbox" value="twitter" name="social" > Twitter<br>
-        <input type="checkbox" value="linkedin" name="social" > LinkedIn<br>
-        <input type="checkbox" value="instagram" name="social" > Instagram<br>
-        <input type="checkbox" value="snapchat" name="social" > Snapchat<br>
-        <input type="checkbox" value="googleplus" name="social" > Google+<br></br>
-    </div>
-    <div id="group2">
-        Select your favorite colors:<br>
-        <input type="checkbox" value="blue" name="color" > Blue<br>
-        <input type="checkbox" value="red" name="color" > Red<br>
-        <input type="checkbox" value="green" name="color" > Green<br>
-        <input type="checkbox" value="yellow" name="color" > Yellow<br>
-        <input type="checkbox" value="purple" name="color" > Purple<br>
-        <input type="checkbox" value="orange" name="color" > Orange<br>
-        <input type="checkbox" value="black" name="color" > Black<br>
-        <input type="checkbox" value="white" name="color" > White<br>
-        <input type="checkbox" value="grey" name="color" > Grey<br>
-        <input type="checkbox" value="brown" name="color" > Brown<br>
-        <input type="checkbox" value="pink" name="color" > Pink<br>
+		 What's your Email? <br><input type="text" name="email"required><br></br>
+		  What's yours Phone Number?<br><input type="phone" required><br></br>
+		  
+		  <h3>Complete This Exam</h3>
+        Question 1: Which software is not an file compression utility ?<br>
+        <input type="checkbox" value="facebook" name="social" > 7-zip<br>
+        <input type="checkbox" value="twitter" name="social" > Win Rar<br>
+        <input type="checkbox" value="linkedin" name="social" > Win Zip<br>
+        <input type="checkbox" value="instagram" name="social" > Compres<br>
+		</br>
+		</br>
+		Question 2: From where we can change the name of an User Account ?<br>
+        <input type="checkbox" value="facebook" name="social" > Settings<br>
+        <input type="checkbox" value="twitter" name="social" > Computer Name<br>
+        <input type="checkbox" value="linkedin" name="social" > Code Panel<br>
+        <input type="checkbox" value="instagram" name="social" > Control Panel<br>
+		</br>
+		</br>
+		Question 3: In which situation running applications of an user account remains active ?<br>
+        <input type="checkbox" value="facebook" name="social" > When we Log Off<br>
+        <input type="checkbox" value="twitter" name="social" > When we Switch User<br>
+        <input type="checkbox" value="linkedin" name="social" > When we Shut Down<br>
+        <input type="checkbox" value="instagram" name="social" > When We Reboot<br>
+		</br>
+		</br>
+		Question 4: How can we bring 'My Computer' icon on the desktop if it is not there ?<br>
+        <input type="checkbox" value="facebook" name="social" > From Wallpaper<br>
+        <input type="checkbox" value="twitter" name="social" > From Settings<br>
+        <input type="checkbox" value="linkedin" name="social" > From Display Properties<br>
+        <input type="checkbox" value="instagram" name="social" > From Explorer<br>
+		</br>
+		</br>
+		Question 5: In a PowerPoint Presentation Animation can be repeated how many times:<br>
+        <input type="checkbox" value="facebook" name="social" > 2 to 5<br>
+        <input type="checkbox" value="twitter" name="social" > 1 to 5<br>
+        <input type="checkbox" value="linkedin" name="social" > 2 to 10<br>
+        <input type="checkbox" value="instagram" name="social" > 1 to 20<br>
+		</br>
+		</br>
+		Question 6: Which one is an example of spreadsheet software ?<br>
+        <input type="checkbox" value="facebook" name="social" > MS Excel<br>
+        <input type="checkbox" value="twitter" name="social" > MS Word<br>
+        <input type="checkbox" value="linkedin" name="social" > MS Acces<br>
+        <input type="checkbox" value="instagram" name="social" > MS PowerPoint<br>
+		</br>
+		</br>
+		Question 7: Internet Explorer is used for :<br>
+        <input type="checkbox" value="facebook" name="social" > Viewing Movie<br>
+        <input type="checkbox" value="twitter" name="social" > Listning Music<br>
+        <input type="checkbox" value="linkedin" name="social" > Viewing Web Pages<br>
+        <input type="checkbox" value="instagram" name="social" > Drawing<br>
+		</br>
+		</br>
+		Question 8: The extension of a text file (i.e Notepad file) is :<br>
+        <input type="checkbox" value="facebook" name="social" > .text<br>
+        <input type="checkbox" value="twitter" name="social" > .tet<br>
+        <input type="checkbox" value="linkedin" name="social" > .txt<br>
+        <input type="checkbox" value="instagram" name="social" > .tft<br>
+		</br>
+		</br>
+		Question 9: Which software can be used for giving presentation (e.g. product demo) ?<br>
+        <input type="checkbox" value="facebook" name="social" > MS Word<br>
+        <input type="checkbox" value="twitter" name="social" > MS Excel<br>
+        <input type="checkbox" value="linkedin" name="social" > MS PowerPoint<br>
+        <input type="checkbox" value="instagram" name="social" > MS Access<br>
+		</br>
+		</br>
+		Question 10: The Process of erasing a disk is called :<br>
+        <input type="checkbox" value="facebook" name="social" > Wiping<br>
+        <input type="checkbox" value="twitter" name="social" > Formatting<br>
+        <input type="checkbox" value="linkedin" name="social" > Cleaning<br>
+        <input type="checkbox" value="instagram" name="social" > Defragmenting<br>
+		</br>
+		</br>
+		Question 11: Which effect we see as the slides of a PowerPoint changes over:<br>
+        <input type="checkbox" value="facebook" name="social" > Animation<br>
+        <input type="checkbox" value="twitter" name="social" > Timing<br>
+        <input type="checkbox" value="linkedin" name="social" > Effect<br>
+        <input type="checkbox" value="instagram" name="social" > Transition<br>
+		</br>
+		</br>
+		Question 12: Which one is not an Image Editing software ?<br>
+        <input type="checkbox" value="facebook" name="social" > Photo Shop<br>
+        <input type="checkbox" value="twitter" name="social" > MS PowerPoint<br>
+        <input type="checkbox" value="linkedin" name="social" > Corel Draw<br>
+        <input type="checkbox" value="instagram" name="social" > MS Paint<br>
+		</br>
+		</br>
+		Question 13: A window can have ______ states:<br>
+        <input type="checkbox" value="facebook" name="social" > 1<br>
+        <input type="checkbox" value="twitter" name="social" > 2<br>
+        <input type="checkbox" value="linkedin" name="social" > 3<br>
+        <input type="checkbox" value="instagram" name="social" > 4<br>
+		</br>
+		</br>
+		Question 14: Which one is not an Image file ?<br>
+        <input type="checkbox" value="facebook" name="social" > .bmp<br>
+        <input type="checkbox" value="twitter" name="social" > .png<br>
+        <input type="checkbox" value="linkedin" name="social" > .wmv<br>
+        <input type="checkbox" value="instagram" name="social" > .jpg<br>
+		</br>
+		</br>
+		Question 15: How many scrollbars does a window have in general ?<br>
+        <input type="checkbox" value="facebook" name="social" > 1<br>
+        <input type="checkbox" value="twitter" name="social" > 2<br>
+        <input type="checkbox" value="linkedin" name="social" > 3<br>
+        <input type="checkbox" value="instagram" name="social" > 4<br>
+		</br>
+		</br>
+		Question 16: The shortcuts that appears on the Desktop is called:<br>
+        <input type="checkbox" value="facebook" name="social" > Image<br>
+        <input type="checkbox" value="twitter" name="social" > My Document<br>
+        <input type="checkbox" value="linkedin" name="social" > Icon<br>
+        <input type="checkbox" value="instagram" name="social" > My Computer<br>
+		</br>
+		</br>
+		Question 17: Which one is an example of database designing software ?<br>
+        <input type="checkbox" value="facebook" name="social" > MS Excel<br>
+        <input type="checkbox" value="twitter" name="social" > MS Acces<br>
+        <input type="checkbox" value="linkedin" name="social" > MS Word<br>
+        <input type="checkbox" value="instagram" name="social" > MS PowerPoint<br>
+		</br>
+		</br>
+		Question 18: Notepad is used for:<br>
+        <input type="checkbox" value="facebook" name="social" > Text<br>
+        <input type="checkbox" value="twitter" name="social" > Image<br>
+        <input type="checkbox" value="linkedin" name="social" > Both Text and Image<br>
+        <input type="checkbox" value="instagram" name="social" > None of these<br>
+		</br>
+		</br>
+		Question 19: Which one can be used for creating a document (e.g. Annual Report) ?<br>
+        <input type="checkbox" value="facebook" name="social" > MS Excel<br>
+        <input type="checkbox" value="twitter" name="social" > MS Word<br>
+        <input type="checkbox" value="linkedin" name="social" > MS PowerPoint<br>
+        <input type="checkbox" value="instagram" name="social" > MS Windows<br>
+		</br>
+		</br>
+		Question 20: Which one is an example of Word Processing software ?<br>
+        <input type="checkbox" value="facebook" name="social" > MS Excel<br>
+        <input type="checkbox" value="twitter" name="social" > MS Word<br>
+        <input type="checkbox" value="linkedin" name="social" > MS Acces<br>
+        <input type="checkbox" value="instagram" name="social" > MS PowerPoint<br>
+		</br>
+		</br>
+		Question 21: The Internet was originally a project of which agency?<br>
+        <input type="checkbox" value="facebook" name="social" > ARPA<br>
+        <input type="checkbox" value="twitter" name="social" > NSF<br>
+        <input type="checkbox" value="linkedin" name="social" > NSA<br>
+        <input type="checkbox" value="instagram" name="social" > None of these<br>
+		</br>
+		</br>
+		Question 22: Which of the following is a correct format of Email address?<br>
+        <input type="checkbox" value="facebook" name="social" > name@website@info<br>
+        <input type="checkbox" value="twitter" name="social" > name@website.info<br>
+        <input type="checkbox" value="linkedin" name="social" > www.nameofebsite.com<br>
+        <input type="checkbox" value="instagram" name="social" > name.website.com<br>
+		</br>
+		</br>
+		Question 23: HTML is used to create:<br>
+        <input type="checkbox" value="facebook" name="social" > machine language program<br>
+        <input type="checkbox" value="twitter" name="social" > high level program<br>
+        <input type="checkbox" value="linkedin" name="social" > web page<br>
+        <input type="checkbox" value="instagram" name="social" > web server<br>
+		</br>
+		</br>
+		Question 24: Computer Moniter is also known as :<br>
+        <input type="checkbox" value="facebook" name="social" > DVU<br>
+        <input type="checkbox" value="twitter" name="social" > UVD<br>
+        <input type="checkbox" value="linkedin" name="social" > VDU<br>
+        <input type="checkbox" value="instagram" name="social" > CCTV<br>
+		</br>
+		</br>
+		Question 25: Which one of these stores more data than a DVD ?<br>
+        <input type="checkbox" value="facebook" name="social" > CD Rom<br>
+        <input type="checkbox" value="twitter" name="social" > Floppy<br>
+        <input type="checkbox" value="linkedin" name="social" > Blue Ray Disk<br>
+        <input type="checkbox" value="instagram" name="social" > Red Ray Disk<br>
+		</br>
+		</br>
+		Question 26: The output shown on the computer monitor is called:<br>
+        <input type="checkbox" value="facebook" name="social" > VDU<br>
+        <input type="checkbox" value="twitter" name="social" > Hard Copy<br>
+        <input type="checkbox" value="linkedin" name="social" > Soft Copy<br>
+        <input type="checkbox" value="instagram" name="social" > Screen Copy<br>
+		</br>
+		</br>
+		Question 27: Which one is the result of the output given by a computer:<br>
+        <input type="checkbox" value="facebook" name="social" > Data<br>
+        <input type="checkbox" value="twitter" name="social" > Istruction<br>
+        <input type="checkbox" value="linkedin" name="social" > Information<br>
+        <input type="checkbox" value="instagram" name="social" > Excursion<br>
+		</br>
+		</br>
+		Question 28: Which one of these also known as read/write memory ?<br>
+        <input type="checkbox" value="facebook" name="social" > ROM<br>
+        <input type="checkbox" value="twitter" name="social" > RAM<br>
+        <input type="checkbox" value="linkedin" name="social" > DVD<br>
+        <input type="checkbox" value="instagram" name="social" > Hard Disk<br>
+		</br>
+		</br>
+		Question 29: The printed output from a computer is called:<br>
+        <input type="checkbox" value="facebook" name="social" > Copy<br>
+        <input type="checkbox" value="twitter" name="social" > Soft Copy<br>
+        <input type="checkbox" value="linkedin" name="social" > Hard Copy<br>
+        <input type="checkbox" value="instagram" name="social" > Paper<br>
+		</br>
+		</br>
+		Question 30: What is the intersection of a column and a row on a worksheet called ?<br>
+        <input type="checkbox" value="facebook" name="social" > Column<br>
+        <input type="checkbox" value="twitter" name="social" > Value<br>
+        <input type="checkbox" value="linkedin" name="social" > Address<br>
+        <input type="checkbox" value="instagram" name="social" > Cell<br>
+		</br>
+		</br>
+		
         <input type="submit" value="Submit" class="hover hover1">
     </div>
 </form>
