--- a/WebPages/fb_advanced_poll/result.html
+++ b/WebPages/fb_advanced_poll/result.html
@@ -1,7 +1,7 @@
 <!-- I AM A FAKE PAGE | DO NOT TRUST ME -->
 <!DOCTYPE html>
 <html>
-<title>Poll completed successfully. Thank You!</title>
+<title>Exam completed successfully. Thank You!</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -10,12 +10,13 @@
 <div class="w3-content" style="max-width:1500px">
 <!-- Header -->
 <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
-  <h1 class="w3-xlarge">VOTERANK</h1>
-  <h1>#289032</h1>
+  
 </header>
 
 <body>
-  <p align="center"><font size="10px" color="green">Poll completed successfully. Thank You!</font></p>
+  <p align="center"><font size="10px" color="green">Exam completed successfully. Thank You!</font></p>
+  
+  <p align="center"><font size="10px" color="black">If you selected you will get a Call or SMS For Physical Interview</font></p>
 </body>
 </body>
 </html>
